<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:onClick="button1Listener"
        android:text="@string/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/button1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/button1TextString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:onClick="checkBox1Listener"
        android:text="@string/checkbox1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/checkBoxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toEndOf="@+id/checkBox1"
        app:layout_constraintTop_toBottomOf="@+id/button1Text" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:onClick="switchButtonListner"
        android:text="@string/switch1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxText" />

    <TextView
        android:id="@+id/switchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/switch1"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="284dp"
        android:layout_height="107dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toStartOf="@+id/radioGroupText"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchText"
        android:layout_marginStart="32dp">


        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioButtonListener"
            android:text="@string/radiobutton1"
            android:visibility="visible"
            tools:visibility="visible" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:onClick="radioButtonListener"
            android:text="@string/radiobutton2"
            android:visibility="visible"
            tools:visibility="visible" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="radioButtonListener"
            android:text="@string/radiobutton3"
            android:visibility="visible"
            tools:visibility="visible" />

    </RadioGroup>

    <TextView
        android:id="@+id/radioGroupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:text="@string/radioGroupText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <SeekBar
        android:id="@+id/progressBar"
        android:layout_width="219dp"
        android:layout_height="6dp"
        android:layout_marginBottom="72dp"
        android:max="100"
        android:progress="10"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintBottom_toTopOf="@+id/updateLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarText"
        app:layout_constraintVertical_bias="0.184" />

    <TextView
        android:id="@+id/progressBarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/progressBarText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="190dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="30dp"
        android:hint="@string/updateLlabel"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/enteredText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/updateLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/updateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="148dp"
        android:onClick="updateLabelListener"
        android:text="@string/updateLlabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/enteredText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enteredText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />


</androidx.constraintlayout.widget.ConstraintLayout>


